--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,11 +1,35 @@
-/* 
-
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
+body {
+    margin-top: 100px;
+  }
+  
+  .container {
+    border-radius: 1px;
+    box-shadow: 0 10px 40px rgba(0, 0, 0, 0.5);
+  }
+  
+  h1 {
+    text-align: center;
+  }
+  
+  ul {
+    padding: 0;
+    margin-bottom: 0;
+  }
+  
+  ul li {
+    border: 1px solid grey;
+    list-style: none;
+    padding: 5px;
+  }
+  
+  input {
+    border: none;
+    width: 100%;
+  }
+  
+  .todo-item {
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+  }
+  
